# MoonRobot

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/codeql/: codeql-coding-standard.yml
.github/workflows/: README.md  build-cfs.yml  build-run-app.yml  build-run-on-target.yml  format-check.yml  rogues-gallery.yml  static-analysis-reuse.yml  static-analysis.yml  unit-test-coverage.yml
apps/DDFK/: CMakeLists.txt
apps/DDFK/fsw/mission_inc/: ddfk_app_perfids.h
apps/DDFK/fsw/platform_inc/: ddfk_app_msgids.h
apps/DDFK/fsw/src/: ddfk_app_msg.h
apps/DDFK/unit-test/: CMakeLists.txt
apps/ddfk/: .cookiecutterrc  CHANGELOG.md  CMakeLists.txt  README.md
apps/ddfk/fsw/platform_inc/: ddfk_app_msgids.h  ddfk_app_table.h
apps/ddfk/fsw/src/: ddfk_app.c  ddfk_app.h  ddfk_app_events.h  ddfk_app_version.h
apps/ddfk/fsw/tables/: ddfk_app_tbl.c
apps/ddfk/unit-test/: CMakeLists.txt
apps/ddfk/unit-test/coveragetest/: coveragetest_ddfk_app.c  ddfk_app_coveragetest_common.h
apps/ddfk/unit-test/inc/: ut_ddfk_app.h
apps/romimot/: .cookiecutterrc  CMakeLists.txt  README.md
apps/romimot/fsw/mission_inc/: romimot_perfids.h
apps/romimot/fsw/platform_inc/: romimot_msgids.h  romimot_table.h
apps/romimot/fsw/src/: romimot.c  romimot.h  romimot_events.h  romimot_hw.c  romimot_hw.h  romimot_msg.h  romimot_version.h
apps/romimot/fsw/tables/: romimot_tbl.c
apps/romimot/unit-test/: CMakeLists.txt
apps/romimot/unit-test/coveragetest/: coveragetest_romimot.c  romimot_coveragetest_common.h
apps/romimot/unit-test/inc/: ut_romimot.h
apps/sch_lab/: CMakeLists.txt
apps/sch_lab/fsw/tables/: sch_lab_table.c
apps/to_lab/: CMakeLists.txt
apps/to_lab/fsw/tables/: to_lab_sub.c
arduino_code/RomiRPiRemoteControl/: RomiRPiRemoteControl.ino
moonrobot_defs/: arch_build_custom.cmake  arch_build_custom_native.cmake  cpu1_cfe_es_startup.scr  targets.cmake  toolchain-arm64-pi-linux-gnueabi.cmake  toolchain-i686-linux-clang.cmake  toolchain-i686-linux-gnu.cmake
slurm/: slurm-arm.sh  slurm-riscv.sh
tools/: CMakeLists.txt
tools/cFS-GroundSystem/Subsystems/cmdGui/: CHeaderParser-hdr-paths.txt  command-pages.txt  quick-buttons.txt
tools/cFS-GroundSystem/Subsystems/cmdGui/CommandFiles/: ROMIMOT_CMD
tools/cFS-GroundSystem/Subsystems/cmdGui/ParameterFiles/: ROMIMOT_SET_TARGET_DELTA_CC
tools/cFS-GroundSystem/Subsystems/tlmGUI/: cfs-romimot-hk-tlm.txt  telemetry-pages.txt
